Corrected NDEBUG in gmsh/model to UM2_ENABLE_ASSERTS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         asserts: [ON, OFF]
         gmsh: [ON, OFF]
 
-    name: "${{matrix.compiler}}-${{matrix.build_type}},gmsh=${{matrix.gmsh}}"
+    name: "${{matrix.compiler}}-${{matrix.build_type}},asserts=${{matrix.asserts}},gmsh=${{matrix.gmsh}}"
 
     steps:
       - uses: actions/checkout@v3
