Added SVEA model and ability to add materials by atom percent

--- a/models/CMakeLists.txt
+++ b/models/CMakeLists.txt
@@ -3,4 +3,5 @@ include(${PROJECT_SOURCE_DIR}/cmake/um2_add_executable.cmake)
 add_subdirectory(./c5g7)
 add_subdirectory(./vera)
 add_subdirectory(./crocus)
+add_subdirectory(./svea)
 add_subdirectory(./fnr)
