Added nuscale model + bugfixes

--- a/models/CMakeLists.txt
+++ b/models/CMakeLists.txt
@@ -4,4 +4,5 @@ add_subdirectory(./c5g7)
 add_subdirectory(./vera)
 add_subdirectory(./crocus)
 add_subdirectory(./svea)
+add_subdirectory(./nuscale)
 add_subdirectory(./fnr)
