--- a/models/fnr/CMakeLists.txt
+++ b/models/fnr/CMakeLists.txt
@@ -1,2 +1,3 @@
 um2_add_executable(./fnr_heu_2d_single_asy.cpp)
-#um2_add_executable(./fnr_heu_2d.cpp)
+um2_add_executable(./fnr_leu_2d_variable_grid.cpp) 
+um2_add_executable(./fnr_leu_2d_advanced_mesh.cpp)
