--- a/post-process/CMakeLists.txt
+++ b/post-process/CMakeLists.txt
@@ -4,3 +4,4 @@ um2_add_executable(./extract_meanchordlength.cpp)
 um2_add_executable(./extract_edge_length.cpp)
 um2_add_executable(./extract_cmfd_info.cpp)
 um2_add_executable(./extract_powers.cpp)
+um2_add_executable(./extract_spectrum.cpp)
