--- a/models/c5g7/CMakeLists.txt
+++ b/models/c5g7/CMakeLists.txt
@@ -1,3 +1,4 @@
 um2_add_executable(./2d/c5g7_2d_variable_grid.cpp)
 um2_add_executable(./2d/c5g7_2d_advanced_mesh.cpp)
+um2_add_executable(./2d/c5g7_extract_source.cpp)
 um2_add_executable(./3d/c5g7_3d_standard_moc.cpp)
