Source extraction + format

--- a/models/crocus/CMakeLists.txt
+++ b/models/crocus/CMakeLists.txt
@@ -1,2 +1,3 @@
 um2_add_executable(./crocus_2d_variable_grid.cpp)
 um2_add_executable(./crocus_2d_advanced_mesh.cpp)
+um2_add_executable(./crocus_2d_extract_source.cpp)
