Source extraction for FNR

--- a/models/fnr/CMakeLists.txt
+++ b/models/fnr/CMakeLists.txt
@@ -1,3 +1,4 @@
 um2_add_executable(./fnr_heu_2d_single_asy.cpp)
 um2_add_executable(./fnr_leu_2d_variable_grid.cpp) 
 um2_add_executable(./fnr_leu_2d_advanced_mesh.cpp)
+um2_add_executable(./fnr_leu_2d_extract_source.cpp)
